@@ -1082,3 +1082,4 @@ The following functions accept any form a path. The INI and language INI functio
             Fixed: The logo area has never been erased if marked dirty
 2019-02-22: Added: DO_SYNC and NO_SYNC - human-friendly arguments to OSDMenuUpdate()
             Fixed: OSDMenuGetW() and OSDMenuPutS() could not handle all sizes of the standard fonts (new: use size + 0xB for bold fonts)
+            Added: OSDMenuGetH() to get a string's height
